# vcpckgTestProject

./: .gitignore  CMakeLists.txt  helloworld.cpp  main.cpp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake-multi-platform.yml
ExPac/: CMakeLists.txt  ExPacConfig.cmake.in
ExPac/Core/: CMakeLists.txt  Core.cpp  Core.hpp
ExPac/Manager/: CMakeLists.txt  Manager.cpp  Manager.hpp
vcpkg/ports/expac/: portfile.cmake  vcpkg.json
